--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,10 @@
     ],
     "require": {
         "php": "^8.2",
+        "illuminate/contracts": "^9.0 ||^10.0||^11.0",
         "laravel/framework": "^9.0 || ^10.0 || ^11.0",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^9.0 ||^10.0||^11.0"
+        "saloonphp/saloon": "^3.8",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
